{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 244,
  "lineage": "8bacc2b0-b5c2-e128-0006-9f04b95fd3f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:internet-gateway/igw-0633f301570c73341",
            "id": "igw-0633f301570c73341",
            "owner_id": "654654291247",
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654291247:loadbalancer/app/example-lb/52235da02443e1e1",
            "arn_suffix": "app/example-lb/52235da02443e1e1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-1311384689.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654291247:loadbalancer/app/example-lb/52235da02443e1e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e39475580ec4f1ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a247cf99146aed28"
              },
              {
                "subnet_id": "subnet-0a54372ce8c2ca9c9"
              }
            ],
            "subnets": [
              "subnet-0a247cf99146aed28",
              "subnet-0a54372ce8c2ca9c9"
            ],
            "vpc_id": "vpc-0495dcaed517239e3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654291247:listener/app/example-lb/52235da02443e1e1/fd4065a7936dce11",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654291247:targetgroup/example-tg/51790b8decbd3811",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654291247:listener/app/example-lb/52235da02443e1e1/fd4065a7936dce11",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654291247:loadbalancer/app/example-lb/52235da02443e1e1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example_lb",
            "aws_lb_target_group.example_tg",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654291247:targetgroup/example-tg/51790b8decbd3811",
            "arn_suffix": "targetgroup/example-tg/51790b8decbd3811",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654291247:targetgroup/example-tg/51790b8decbd3811",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:route-table/rtb-0992c3684707ed813",
            "id": "rtb-0992c3684707ed813",
            "owner_id": "654654291247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0633f301570c73341",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ceff30da6fe3337",
            "route_table_id": "rtb-0992c3684707ed813",
            "subnet_id": "subnet-0a247cf99146aed28"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005766652c5cb158f",
            "route_table_id": "rtb-0992c3684707ed813",
            "subnet_id": "subnet-0a54372ce8c2ca9c9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:subnet/subnet-0a247cf99146aed28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a247cf99146aed28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654291247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:subnet/subnet-0a54372ce8c2ca9c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a54372ce8c2ca9c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654291247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:vpc/vpc-0495dcaed517239e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093f16af568069d0a",
            "default_route_table_id": "rtb-0be6c4aaaeefcd684",
            "default_security_group_id": "sg-0e39475580ec4f1ee",
            "dhcp_options_id": "dopt-0e432a5d686624898",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0495dcaed517239e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be6c4aaaeefcd684",
            "owner_id": "654654291247"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:security-group/sg-045b0a8fa56e5f6cb",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-045b0a8fa56e5f6cb",
            "ingress": [],
            "name": "foxops-cluster-2024121416533182870000000b",
            "name_prefix": "foxops-cluster-",
            "owner_id": "654654291247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foxops-cluster"
            },
            "tags_all": {
              "Name": "foxops-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654291247:security-group/sg-077c732eda9e79aaf",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-077c732eda9e79aaf",
            "ingress": [],
            "name": "foxops-node-2024121416533182870000000a",
            "name_prefix": "foxops-node-",
            "owner_id": "654654291247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "foxops-node",
              "kubernetes.io/cluster/foxops": "owned"
            },
            "tags_all": {
              "Name": "foxops-node",
              "kubernetes.io/cluster/foxops": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0495dcaed517239e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1669319431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-045b0a8fa56e5f6cb",
            "security_group_rule_id": "sgr-052441c34a1b3f6ff",
            "self": false,
            "source_security_group_id": "sg-077c732eda9e79aaf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1639591432",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-043afdbd9e6b2c985",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1774404913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-0305c773e8dfb9f59",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1469663239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-0fb135f08ba1cd141",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1629802607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-0534f16e5c9b18f86",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1920527438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-09efa9da2348890d7",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-383377285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-0fc0225ea9b02efbe",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1133539236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-02bf01b214a76e419",
            "self": false,
            "source_security_group_id": "sg-045b0a8fa56e5f6cb",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2088977886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-01dfdb1e2b4145e5f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1381521171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-086e16517880c1ad5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-167250690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-077c732eda9e79aaf",
            "security_group_rule_id": "sgr-0de55620c889fe84f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ]
        }
      ]
    }
  ]
}